argo-projects/argo-cd/resources/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
